--- a/src/app/components/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -1,6 +1,15 @@
 @import 'base/base';
 @import 'abstracts/variables';
 
+@keyframes rotateTitle {
+	0% {
+	}
+	50% {
+		transform: rotate(360deg);
+	}
+	100% {
+	}
+}
 .detail-container {
 	padding: 2rem;
 	display: flex;
@@ -18,6 +27,35 @@
 	&__no-selected {
 		width: 30vw;
 		min-width: 250px;
+		background-color: #f0f0f0;
+		border-radius: 20px 20px 60px 20px;
+		padding: 2.5rem;
+		box-shadow: 0 0 5px 3px #aaa;
+	}
+}
+
+.choose {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	&__img {
+		width: 50%;
+		animation: rotate 3s cubic-bezier(0.68, -0.55, 0.27, 1.55) 1s infinite
+			normal;
+		padding: 2rem;
+		opacity: 0.8;
+	}
+	&__title {
+		text-align: center;
+		font-size: 2.5rem;
+		text-transform: uppercase;
+		letter-spacing: 0.3rem;
+		word-spacing: 1.2rem;
+		padding: 2rem 0;
+		animation: rotate 3s cubic-bezier(0.68, -0.55, 0.27, 1.55) 2s infinite;
+		&--poke {
+			color: #db4545;
+		}
 	}
 }
 
@@ -38,7 +76,21 @@
 		flex: 1;
 	}
 }
+// Animation
+@keyframes rotate {
+	// 0%{transform: rotateY(0deg)}
+	// 25%{transform: rotateY(360deg);}
+	// 50%{transform: rotateY(360deg);}
+	// 100%{transform: rotateY(0deg)}
+	from {
+		transform: rotateY(0deg);
+	}
+	to {
+		transform: rotateY(360deg);
+	}
+}
 
+// Responsive
 @media (max-width: 768px) {
 	.detail-container {
 		padding-left: 2rem;
